test/negative/finally02.cfr
// Test for finally constraint

a
 b ?
  c ?
  d ?
  e final ?
  

//Rao: 2014-08-08: working as expected, it fails.

